{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 82,
  "lineage": "dad34757-767f-4312-dfbb-eebd2936f120",
  "resources": [
    {
      "module": "module.infra-dev",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:120335488761:vpc/vpc-0114e81dc93b7f9a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-096c9bd99c4b170f8",
            "default_route_table_id": "rtb-041eec4bb76eed323",
            "default_security_group_id": "sg-02a1bc69102f8c472",
            "dhcp_options_id": "dopt-0a093e1a93462986c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0114e81dc93b7f9a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041eec4bb76eed323",
            "owner_id": "120335488761"
          }
        }
      ]
    },
    {
      "module": "module.infra-dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_instance_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c8f2ec674c67112",
            "arn": "arn:aws:ec2:us-east-2:120335488761:instance/i-0f5873621ead4f712",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f5873621ead4f712",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-infra-app-key-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c12a8fbb09bb80a",
            "private_dns": "ip-172-31-15-50.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.15.50",
            "public_dns": "ec2-3-17-174-107.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.174.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0429be9db4c8ed001",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "devinfra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a7d86b67d240314",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-app-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e105643983141887"
            ]
          },
          "dependencies": [
            "module.infra-dev.aws_default_vpc.default_vpc",
            "module.infra-dev.aws_key_pair.deployer",
            "module.infra-dev.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.infra-dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:120335488761:security-group/sg-0e105643983141887",
            "description": "This is my security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e105643983141887",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8000 port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8000
              }
            ],
            "name": "devinfra-app-sg",
            "name_prefix": "",
            "owner_id": "120335488761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "name": "dev-allow_port"
            },
            "tags_all": {
              "Environment": "dev",
              "name": "dev-allow_port"
            },
            "timeouts": null,
            "vpc_id": "vpc-0114e81dc93b7f9a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra-dev.aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra-prod",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:120335488761:vpc/vpc-0114e81dc93b7f9a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-096c9bd99c4b170f8",
            "default_route_table_id": "rtb-041eec4bb76eed323",
            "default_security_group_id": "sg-02a1bc69102f8c472",
            "dhcp_options_id": "dopt-0a093e1a93462986c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0114e81dc93b7f9a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041eec4bb76eed323",
            "owner_id": "120335488761"
          }
        }
      ]
    },
    {
      "module": "module.infra-prod",
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_instance_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c8f2ec674c67112",
            "arn": "arn:aws:ec2:us-east-2:120335488761:instance/i-08c2ae84427ae18eb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c2ae84427ae18eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-infra-app-key-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05858a301e7fe3273",
            "private_dns": "ip-172-31-2-122.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.122",
            "public_dns": "ec2-3-145-32-123.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.32.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f7e8b8ae33ef9244",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prodinfra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a7d86b67d240314",
            "tags": {
              "Environment": "prod",
              "Name": "prod-infra-app-instance"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c21d39d66e7352c"
            ]
          },
          "dependencies": [
            "module.infra-prod.aws_default_vpc.default_vpc",
            "module.infra-prod.aws_key_pair.deployer",
            "module.infra-prod.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c8f2ec674c67112",
            "arn": "arn:aws:ec2:us-east-2:120335488761:instance/i-03a73e727392d8909",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a73e727392d8909",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-infra-app-key-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee1e1b093d16ff46",
            "private_dns": "ip-172-31-13-62.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.13.62",
            "public_dns": "ec2-3-145-206-73.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.206.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06aeae37665eec99c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prodinfra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a7d86b67d240314",
            "tags": {
              "Environment": "prod",
              "Name": "prod-infra-app-instance"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c21d39d66e7352c"
            ]
          },
          "dependencies": [
            "module.infra-prod.aws_default_vpc.default_vpc",
            "module.infra-prod.aws_key_pair.deployer",
            "module.infra-prod.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.infra-prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:120335488761:security-group/sg-09c21d39d66e7352c",
            "description": "This is my security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c21d39d66e7352c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8000 port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8000
              }
            ],
            "name": "prodinfra-app-sg",
            "name_prefix": "",
            "owner_id": "120335488761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "name": "prod-allow_port"
            },
            "tags_all": {
              "Environment": "prod",
              "name": "prod-allow_port"
            },
            "timeouts": null,
            "vpc_id": "vpc-0114e81dc93b7f9a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra-prod.aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.infra-stag",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:120335488761:vpc/vpc-0114e81dc93b7f9a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-096c9bd99c4b170f8",
            "default_route_table_id": "rtb-041eec4bb76eed323",
            "default_security_group_id": "sg-02a1bc69102f8c472",
            "dhcp_options_id": "dopt-0a093e1a93462986c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0114e81dc93b7f9a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041eec4bb76eed323",
            "owner_id": "120335488761"
          }
        }
      ]
    },
    {
      "module": "module.infra-stag",
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_instance_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c8f2ec674c67112",
            "arn": "arn:aws:ec2:us-east-2:120335488761:instance/i-0ad464e9f2a6b3029",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad464e9f2a6b3029",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stag-infra-app-key-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1f03420590ab8f1",
            "private_dns": "ip-172-31-3-198.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.198",
            "public_dns": "ec2-18-116-89-12.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.89.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0934a6b0dfa7319fc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "staginfra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a7d86b67d240314",
            "tags": {
              "Environment": "stag",
              "Name": "stag-infra-app-instance"
            },
            "tags_all": {
              "Environment": "stag",
              "Name": "stag-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0954ebdd71fdbe067"
            ]
          },
          "dependencies": [
            "module.infra-stag.aws_default_vpc.default_vpc",
            "module.infra-stag.aws_key_pair.deployer",
            "module.infra-stag.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.infra-stag",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:120335488761:security-group/sg-0954ebdd71fdbe067",
            "description": "This is my security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0954ebdd71fdbe067",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 80 port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8000 port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8000
              }
            ],
            "name": "staginfra-app-sg",
            "name_prefix": "",
            "owner_id": "120335488761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stag",
              "name": "stag-allow_port"
            },
            "tags_all": {
              "Environment": "stag",
              "name": "stag-allow_port"
            },
            "timeouts": null,
            "vpc_id": "vpc-0114e81dc93b7f9a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra-stag.aws_default_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}